# amai-id-service

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  SERVICES.md  TECH_SPEC.md  WALLETS.md  integration.md  llms.txt  railway.toml  skill.md
.github/workflows/: ci.yml
contracts/base/: AMAIIdentity.sol  foundry.toml
contracts/base/cache/: solidity-files-cache.json
contracts/base/script/: Deploy.s.sol
contracts/base/test/: AMAIIdentity.t.sol
contracts/solana/: Anchor.toml  Cargo.toml
contracts/solana/amai_identity/: lib.rs
scripts/: generate_mock_data.py
src/: action_log.rs  api.rs  auth.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  sigchain.rs  soulchain.rs  state.rs  types.rs
tests/: e2e_test.py  integration.rs
tests/common/: mod.rs
