[package]
name = "id-service"
version = "0.1.0"
edition = "2021"
authors = ["AMAI Labs"]
description = "AMAI Identity Service - GPG/Ed25519 cryptographic identity for autonomous agents"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrent data structures
dashmap = "6"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Cryptography - Ed25519
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Cryptography - RSA
rsa = { version = "0.9", features = ["sha2"] }

# Base64 encoding
base64 = "0.22"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Random
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# WebSocket
futures = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }

[[test]]
name = "integration"
path = "tests/integration.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
