[package]
name = "amai-identity"
version = "0.1.0"
description = "AMAI Agent Identity Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amai_identity"
path = "amai_identity/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
